// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowHideFocuser should render divider spans and a span to focus to correctly 1`] = `
<p>
  <span
    class="text-divider"
  />
  <span
    id="focus-ref-a5e0945a-697c-4a22-b977-04fd66635c17"
    role="group"
    tabindex="-1"
  >
    In fact, the U.S. ambulatory surgery center market is expected to see a 6.9 % compound annual growth rate, reaching $33 billion by 2028. (2) Cerner
  </span>
  <span
    class="text-divider"
  />
   understands the urgency to grow in the ambulatory surgery center market while continuing to deliver excellent care.
</p>
`;

exports[`ShowHideFocuser should render focusable text correctly 1`] = `
<p>
  <span
    class="text-divider"
  />
  <span
    id="focus-ref-6bbd2efb-c07e-4531-820a-6355e5bf929b"
    role="group"
    tabindex="-1"
  >
    In fact, the U.S. ambulatory surgery center market is expected to see a 6.9 % compound annual growth rate, reaching $33 billion by 2028. (2) Cerner
  </span>
  <span
    class="text-divider"
  />
   understands the urgency to grow in the ambulatory surgery center market while continuing to deliver excellent care.
</p>
`;

exports[`ShowHideFocuser should render preview text correctly 1`] = `
<p>
  Patients are requesting greater affordability and efficiency in healthcare. 
  <span
    class="text-divider"
  />
  <span
    id="focus-ref-0c227055-e13c-4082-b1f9-4bc8af71bfd7"
    role="group"
    tabindex="-1"
  >
    In fact, the U.S. ambulatory surgery center market is expected to see a 6.9 % compound annual growth rate, reaching $33 billion by 2028. (2) Cerner
  </span>
  <span
    class="text-divider"
  />
   understands the urgency to grow in the ambulatory surgery center market while continuing to deliver excellent care.
</p>
`;
